static/main.css
* {
    margin: 0;
    padding: 0;
}
    
body {
    font-family: "Lato", Helvetica, sans-serif;
    background: white;
    line-height: 1.6;
    height: 100vh;
    overflow: hidden;
}

a {
    text-decoration: none;
    color: transparent; 
} 

.container {
    width: 100%;
    height: 100%;
    /* Smooth Scrool */
    overflow-y: scroll;
    scroll-behavior: smooth;
    scroll-snap-type: y mandatory;
}

/* ------- Navbar ------- */

.navbar {
    position: fixed;
    top: 0;
    z-index: 1;
    width: 100vw;
    height: 60px;
    background:white;
}

.navbar ul {
    display: flex;
    list-style: none;
    width: 100%;
    justify-content: center;
}


.navbar ul li {
    margin: 0 1rem;
    padding: 1rem;
    font-size: 1.5rem;
    color: black;
    padding-bottom: 1rem;
    border-bottom: 3px solid transparent;
    transition: border-bottom 0.25s;
}

.navbar ul li a {
    text-decoration: none;
    text-transform: uppercase;
    color: black;
    justify-content: center;
    text-align: center;
    border-bottom: 1px solid transparent;
    transition: border-bottom 0.2s;

}

.navbar a:hover {
    color: black !important;
    border-bottom: 1px solid black;
}

/* ------- Different sections -------  */

section {
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 100%;
    height: 100vh;
    /* smooth scroll */
    scroll-snap-align: center;
    overflow: hidden;
} 

section h1 {
    font-size: 3rem;
}

section p {
    font-size: 25px;
} 

/*  ------- Home section ------- */

#home {
    display: grid;
    overflow: hidden;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: 15rem 1fr 15rem;
    overflow: hidden;
}


.home-background {
    grid-row: 2;
    grid-column: 1/-1;
    position: relative;
    justify-content: center;
    overflow: hidden;
}

#home img {
    width: 50%;
    height: 100%;
}

#home .left-side-text{
    grid-row: 2;
    grid-column: 1;
    font-size: 3rem;
    padding-right: 200px;
    padding-left: 50px;
    position: relative;
    align-content: center;
    justify-content: center;
}

#home p {
    font-size: 25px;
}

#home .right-side-text{
    grid-row: 2;
    grid-column: 3;
    text-align: left;
    padding-left: 150px;
    padding-right: 50px;
    align-content: left;
    justify-content: left;
}

/* ------- Project Section ------- */

#projects {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr 1fr;
    justify-content: center;
}

#projects h1 {
    margin: 0;
    padding-top: 4rem;
    padding-bottom: 2rem;
    grid-row: 1;
    grid-column: 1/-1;
    color: black;
    font-size: 2rem;
}

#projects p {
    color: #efefef transparent;
}

/* changes */
#projects .portfolio-items-wrapper {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(auto-fit, 1fr 1fr 1fr);
    padding-bottom: 10%;
}

.portfolio-item-wrapper{
    position: relative;
}


#projects .img-text-wrapper {
    position: absolute;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    height: 100%;
    width: 100%;
    text-align: center;
    padding-left: 0;
    padding-right: 0;
}

#projects .img-text-wrapper .subtitle {
    transition: 0.25s;
    color: white transparent !important;
    font-weight: 1200;
}

#projects .img-text-wrapper p:hover {
    font-weight: 1200;
    
}

.img-darken {
    transition: 0.25s;
    filter: brightness(90%);
    color: rgb(255, 255, 255) !important;
    background: rgba(0,0,0,0.85);
    background-size: cover;
}


.portfolio-item-wrapper {
    height: 17rem;
    width: 33vw;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding: 0px;
}


/*  ------- Blogs Section ---------- */

#blogs {
    display: grid;
    justify-content: center;
    grid-template-columns: 1fr;
    grid-template-rows: 15rem 1fr;
    overflow: hidden;
}

#blogs h1 {
    margin: 0;
    padding-top: 6rem;
    padding-bottom: 2rem;
    grid-row: 1;
    grid-column: 1/-1;
    color: black;
}

#blogs h2 {
    margin: 1px;
    padding-top: 1rem;
    padding-bottom: 0;
    grid-row: 1;
    grid-column: 1/-1;
}
#blogs p {
    color: #efefef transparent;
}

#blogs .blog-content{
    display: grid;
    grid-template-columns:repeat(4, 25%);
    grid-template-rows:repeat (2, 1fr);
    grid-template: span 4;
}
.article-content {
    position: relative;
    justify-self: cover;
    align-self: cover;
}


#blogs .img-text-wrapper {
    position: absolute;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    height: 100%;
    width: 100%;
    text-align: center;
    padding-left: 0;
    padding-right: 0;
}
#blogs .img-text-wrapper .subtitle {
    transition: 0.25s;
    color: white transparent !important;
    font-weight: 600;
}

#blogs .img-text-wrapper:hover {
    font-weight: 600;
    transition: 0.2s;
    filter: brightness(80%);
    color: white !important;
    background: rgba(0, 0, 0, 0.85);
}

.article-content {
    height: 17rem;
    width: 25vw;
    background-size: 90%;
    background-position: center;
    background-repeat: no-repeat;
    padding: 0px;    
}

/* ------- About Section ------- */

#about {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 0.75fr 1fr 1fr 1fr;
}

#about h1{
    grid-row: 1;
    grid-column: 1;
    padding: 20px;
    text-align: center;
    margin: 0;
    padding-top: 6rem;
    padding-bottom: 2rem;
    grid-row: 1;
    color: black;
}

#about p{
    font-family: 'Times New Roman', Times, serif;
    font-size: 23px;
    font-weight: normal;
    line-height: 1.4em;
    grid-row: 3;
    grid-column: 1;
    text-align: left;
    text-align: top;
    padding-left: 40px;
    /* justify-content: center;
    align-content: center; */
}

#about img {
    grid-column: 2;
    grid-row: span 3;
    width: 80%;
    justify-self: center;
    padding-top: 75px;
}

#about .contact {
    grid-column: 1;
    grid-row: 2;
    position: relative;
    transform: translate(-53%, -50);
}

#about li{
    list-style: none;
    margin: 10px 30px;
    display: inline-block;
    font-size: 40px;
    padding: 20px 20px;
    color: black;
    border: 1px solid transparent;
    border-radius: 25%;
    transition: .2s;
}


#about li:hover{
    color: black;
    border: 1px solid black;
    transition: .2s;
}


@media screen and (max-width: 500px){

    .navbar ul {
        display: flex;
        flex-direction: row;
        width: 100%;
        justify-content: center;
    }
    
    .navbar ul li {
        font-size: 0.8rem;
        padding: 0.5em;
    }
}

